--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  text-align: center;
+  padding: 10px;
+}
+
+.home-container {
+  background-image: url('assets/ferry2.jpeg');
+  /* object-fit: cover; */
+  /* object-fit: none; */
+  /* object-fit: scale-down; */
+  /* object-fit: fill; */
+  object-fit: contain;
+
+  min-height: 90vh;
+}
+
+.one {
+  background-position: center;
+  background-size: cover;
+  opacity: 1;
+  position: relative;
+  width: 100%;
 }
