--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,4 +1,5 @@
 footer {
+  /* margin-bottom: 2rem; */
   background: #16222a;
   background: -webkit-linear-gradient(59deg, #3a6073, #16222a);
   background: linear-gradient(59deg, #3a6073, #16222a);
