--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #10765219;
+  background-color: rgba(0, 0, 0, 0.192);
   height: 80px;
   display: flex;
   justify-content: start;
@@ -14,7 +14,7 @@
 }
 
 .nav-menu {
-  background-color: #10765219;
+  background-color: rgba(0, 0, 0, 0.192);
   width: 250px;
   height: 100vh;
   display: flex;
@@ -42,6 +42,7 @@
 .nav-text a {
   text-decoration: none;
   color: #f5f5f5;
+
   font-size: 18px;
   width: 95%;
   height: 100%;
