--- a/frontend/src/Components/Footer.css
+++ b/frontend/src/Components/Footer.css
@@ -1,37 +1,37 @@
 footer {
   /* margin-bottom: 2rem; */
-  background: #16222a;
+  /* background: #16222a;
   background: -webkit-linear-gradient(59deg, #3a6073, #16222a);
   background: linear-gradient(59deg, #3a6073, #16222a);
-  color: white;
+  color: white; */
   margin-top: 100px;
 }
 
-footer h4 {
+/* footer h4 {
   color: #fff;
-}
+} */
 
-footer a {
+/* footer a {
   color: #fff;
   font-size: 14px;
   transition-duration: 0.2s;
-}
+} */
 
 footer a:hover {
   color: #fa944b;
   text-decoration: none;
 }
 
-.copy {
+/* .copy {
   font-size: 12px;
   padding: 10px;
   border-top: 1px solid #ffffff;
-}
+} */
 
-.footer-middle {
+/* .footer-middle {
   padding-top: 2em;
   color: white;
-}
+} */
 
 /*SOCİAL İCONS*/
 
