--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -9,8 +9,8 @@
 .menu-bars {
   margin-left: 2rem;
   font-size: 2rem;
-  /* background-color: none; */
-  /* color: black; */
+  background-color: none;
+  color: black;
 }
 
 .nav-menu {
@@ -41,7 +41,8 @@
 
 .nav-text a {
   text-decoration: none;
-  color: #f5f5f5;
+  /* color: #f5f5f5; */
+  color: black;
 
   font-size: 18px;
   width: 95%;
